--- a/myToolTipSample/myToolTipSample.iOS/myToolTipSample.iOS.csproj
+++ b/myToolTipSample/myToolTipSample.iOS/myToolTipSample.iOS.csproj
@@ -126,6 +126,9 @@
     <PackageReference Include="EasyTipView">
       <Version>1.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms">
+      <Version>2.4.11.982</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.1142" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
