--- a/myToolTipSample/myToolTipSample/myToolTipSample.csproj
+++ b/myToolTipSample/myToolTipSample/myToolTipSample.csproj
@@ -11,6 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="info.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="info.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.1142" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
